{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 62,
  "lineage": "47dacbd8-8f38-02ef-a5f7-03ba6d5557b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:internet-gateway/igw-05c7d0d197142e480",
            "id": "igw-05c7d0d197142e480",
            "owner_id": "589956757861",
            "region": "ap-south-1",
            "tags": {
              "Name": "Devigw"
            },
            "tags_all": {
              "Name": "Devigw"
            },
            "vpc_id": "vpc-07ff6b4ce94c4eb25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.DevVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Devroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:route-table/rtb-0e4c267798c0628ed",
            "id": "rtb-0e4c267798c0628ed",
            "owner_id": "589956757861",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05c7d0d197142e480",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Devroute"
            },
            "tags_all": {
              "Name": "Devroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ff6b4ce94c4eb25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.DevVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnetassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02db4ff2ad3d97818",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e4c267798c0628ed",
            "subnet_id": "subnet-09e7decab3cbc566e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Devroute",
            "aws_subnet.subnets",
            "aws_vpc.DevVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e54dbf2fd5141def",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e4c267798c0628ed",
            "subnet_id": "subnet-0f3dfc43959db4999"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Devroute",
            "aws_subnet.subnets",
            "aws_vpc.DevVpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09509b18992fdd907",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e4c267798c0628ed",
            "subnet_id": "subnet-0b5eb56f7b844ec21"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Devroute",
            "aws_subnet.subnets",
            "aws_vpc.DevVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:security-group/sg-04a2e07de14d8f0c0",
            "description": "Allowing SSH and HTTP",
            "egress": [],
            "id": "sg-04a2e07de14d8f0c0",
            "ingress": [],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "589956757861",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ff6b4ce94c4eb25"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.DevVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:subnet/subnet-09e7decab3cbc566e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e7decab3cbc566e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589956757861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev"
            },
            "tags_all": {
              "Name": "dev"
            },
            "vpc_id": "vpc-07ff6b4ce94c4eb25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.DevVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:subnet/subnet-0f3dfc43959db4999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3dfc43959db4999",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589956757861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "release"
            },
            "tags_all": {
              "Name": "release"
            },
            "vpc_id": "vpc-07ff6b4ce94c4eb25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.DevVpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:subnet/subnet-0b5eb56f7b844ec21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5eb56f7b844ec21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "589956757861",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prod"
            },
            "tags_all": {
              "Name": "prod"
            },
            "vpc_id": "vpc-07ff6b4ce94c4eb25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.DevVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "DevVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:vpc/vpc-07ff6b4ce94c4eb25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e390162b0093cc6",
            "default_route_table_id": "rtb-0a74c793710861516",
            "default_security_group_id": "sg-0c6412127c760d919",
            "dhcp_options_id": "dopt-0ad446f6aec608fce",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ff6b4ce94c4eb25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a74c793710861516",
            "owner_id": "589956757861",
            "region": "ap-south-1",
            "tags": {
              "Name": "DevVPC"
            },
            "tags_all": {
              "Name": "DevVPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:security-group-rule/sgr-01334ad6e4b376998",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound",
            "from_port": 0,
            "id": "sgr-01334ad6e4b376998",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04a2e07de14d8f0c0",
            "security_group_rule_id": "sgr-01334ad6e4b376998",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.DevVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:security-group-rule/sgr-03087635a214d7e03",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "allow few outbound",
            "from_port": 443,
            "id": "sgr-03087635a214d7e03",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04a2e07de14d8f0c0",
            "security_group_rule_id": "sgr-03087635a214d7e03",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.DevVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:security-group-rule/sgr-0354ee9f783929dd6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow-SSH",
            "from_port": 22,
            "id": "sgr-0354ee9f783929dd6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04a2e07de14d8f0c0",
            "security_group_rule_id": "sgr-0354ee9f783929dd6",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.DevVpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:589956757861:security-group-rule/sgr-0e837a835410427e8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow-SSH",
            "from_port": 80,
            "id": "sgr-0e837a835410427e8",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-04a2e07de14d8f0c0",
            "security_group_rule_id": "sgr-0e837a835410427e8",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.DevVpc"
          ]
        }
      ]
    }
  ]
}